[project]
name = "pytest-check"
authors = [{name = "Brian Okken"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
description="A pytest plugin that allows multiple failures per test."
version = "2.4.2"
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: Pytest" ,
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Testing',
    'Topic :: Utilities',
]
dependencies = ["pytest>=7.0.0"]

[project.urls]
Home = "https://github.com/okken/pytest-check"

[project.entry-points.pytest11]
check = "pytest_check.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "tox",
  "tox-uv",
  "build"
]

[tool.flit.sdist]
include = ["changelog.md", "examples", "tests", "tox.ini"]
