[project]
name = "pytest-check"
authors = [{name = "Brian Okken"}]
readme = "README.md"
license = {file = "LICENSE.txt"}
description="A pytest plugin that allows multiple failures per test."
version = "2.5.3"
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: MIT License",
    "Framework :: Pytest" ,
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14',
  'Topic :: Software Development :: Testing',
  'Topic :: Utilities',
]
dependencies = [
  "pytest >= 7.0.0",
    "typing-extensions >= 4.12.2, < 5; python_version < '3.11'"
]

[project.urls]
Home = "https://github.com/okken/pytest-check"

[project.entry-points.pytest11]
check = "pytest_check.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
  "tox",
  "tox-uv",
  "build"
]
